# fmt_num

./: Cargo.toml  readme.md  readme.typ
.github/workflows/: on tag deploy on crates.io.yaml  on tag release on GitHub.yaml  on tag release on github.yaml
src/: format.rs  lib.rs  options.rs  round.rs
