[package]
authors     = ["9-FS <pray4spam@googlemail.com>"]
categories  = ["value-formatting"]
description = "A convenient formatter to scale, round, and display numbers."
edition     = "2021"
exclude     = [".github/", "readme.pdf"]                                     # additional to .gitignore
keywords    = ["format", "numbers"]
license     = "MIT"
name        = "scaler"
readme      = "readme.md"
repository  = "https://github.com/9-FS/scaler"
version     = "1.0.3"

[dependencies]
log = "^0.4.0"
